[tool.poetry]
name = "quantumfinanceai"
version = "0.1.0"
description = "Quantum Finance AI"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.1.3"
djangorestframework = "3.15.2"
django-cors-headers = "4.4.0"
django-filter = "24.3"
djangorestframework-simplejwt = "5.4.0"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.0"
groq = "0.3.0"
openai = "1.30.5"
Pillow = "10.4.0"
gunicorn = "22.0.0"
whitenoise = "6.6.0"
setuptools = "70.0.0"
dj-database-url = "2.1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"