[tool.poetry]
name = "quantumfinanceai"
version = "0.1.0"
description = "Quantum Finance AI"
authors = ["Your Name <your@email.com>"]
packages = [{include = "quantumfinanceai"}]
include = [
    "README.md",
    "requirements.txt",
]

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.1.3"
djangorestframework = "3.15.2"
django-cors-headers = "4.4.0"
django-filter = "24.3"
djangorestframework-simplejwt = "5.4.0"
psycopg = { version = "^3.1", extras = ["binary"] }
python-dotenv = "1.0.0"
groq = "0.3.0"
openai = "1.30.5"
Pillow = "10.4.0"
gunicorn = "22.0.0"
whitenoise = "6.6.0"
setuptools = "70.0.0"
dj-database-url = "2.1.0"
matplotlib = "3.8.0"
reportlab = "4.0.4"
celery = "5.3.4"
redis = "5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"